--- a/app/src/main/res/layout/fragment_recipe_dialog_category.xml
+++ b/app/src/main/res/layout/fragment_recipe_dialog_category.xml
@@ -7,9 +7,9 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipe_author_list"
+        android:id="@+id/recipe_dialog_list"
         android:layout_width="0dp"
-        android:layout_height="280dp"
+        android:layout_height="220dp"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:scrollbars="none"
@@ -18,6 +18,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:spanCount="2"
-        tools:listitem="@layout/item_author_selection" />
+        tools:listitem="@layout/item_category_selection" />
 
 </android.support.constraint.ConstraintLayout>
