--- a/app/src/main/res/layout/fragment_recipe_dialog_author.xml
+++ b/app/src/main/res/layout/fragment_recipe_dialog_author.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recipe_dialog_constraint"
+    android:id="@+id/recipe_dialog_list"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipe_dialog_list"
-        android:layout_width="0dp"
-        android:layout_height="280dp"
-        android:clipToPadding="false"
-        android:orientation="horizontal"
-        android:scrollbars="none"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="2"
-        tools:listitem="@layout/item_author_selection" />
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:scrollbars="none"
+    app:layoutManager="android.support.v7.widget.GridLayoutManager"
+    app:spanCount="2"
+    tools:listitem="@layout/item_author_selection" />
