--- a/app/src/main/res/layout/view_recipe_labels.xml
+++ b/app/src/main/res/layout/view_recipe_labels.xml
@@ -7,13 +7,14 @@
 
     <ImageView
         android:id="@+id/recipe_labels_image"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="4dp"
         android:padding="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/label_icon_gray"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <TextView
         android:id="@+id/recipe_labels_title"
@@ -29,20 +30,21 @@
         tools:text="2 Labels" />
 
     <ImageButton
-        android:id="@+id/recipe_labels_add"
+        android:id="@+id/recipe_labels_edit"
         style="@style/RippleButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:tint="@color/gray_400"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/add_icon"
+        app:srcCompat="@drawable/edit_icon_gray"
         tools:ignore="ContentDescription" />
 
     <View
         android:id="@+id/recipe_labels_horizontal_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:background="@color/gray_100"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,9 +55,12 @@
         android:id="@+id/recipe_labels_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="horizontal"
+        android:padding="8dp"
         android:scrollbars="none"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
