--- a/app/src/main/res/layout/fragment_recipe_dialog_creation.xml
+++ b/app/src/main/res/layout/fragment_recipe_dialog_creation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/recipe_creation_dialog_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
