--- a/app/src/main/res/layout/item_food_entity.xml
+++ b/app/src/main/res/layout/item_food_entity.xml
@@ -16,13 +16,13 @@
         app:srcCompat="@drawable/food_icon_gray"
         tools:ignore="ContentDescription,RtlHardcoded" />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/item_food_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
