--- a/app/src/main/res/layout/fragment_recipe_details_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recipe_details_ingredients.xml
@@ -3,22 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_recipe_details_ingredients_nsv"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/fragment_recipe_details_ingredients_card"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/fragment_recipe_details_ingredients_constraint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp">
 
-        <include layout="@layout/view_recipe_ingredients" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_recipe_details_weight_card"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </android.support.v7.widget.CardView>
+            <include layout="@layout/view_recipe_weight_serving" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_recipe_details_ingredients_card"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_weight_card">
+
+            <include layout="@layout/view_recipe_ingredients" />
+
+        </android.support.v7.widget.CardView>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
