--- a/app/src/main/res/layout/item_food_selection.xml
+++ b/app/src/main/res/layout/item_food_selection.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_food_constraint"
+    style="@style/RippleButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -20,50 +21,46 @@
         android:id="@+id/item_food_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="0dp"
         android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="?android:attr/textColorPrimaryNoDisable"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/item_food_expand_frame"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/item_food_image"
-        app:layout_constraintRight_toLeftOf="@+id/item_food_expand"
+        app:layout_constraintRight_toLeftOf="@+id/item_food_checkbox"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.535"
         tools:ignore="RtlHardcoded"
         tools:text="Food name" />
 
-    <ImageButton
-        android:id="@+id/item_food_expand"
-        style="@style/RippleButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+    <android.support.v7.widget.AppCompatCheckBox
+        android:id="@+id/item_food_checkbox"
+        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="16dp"
+        android:checked="false"
+        android:clickable="false"
+        android:duplicateParentState="false"
+        android:focusable="false"
+        app:buttonTint="@color/orange_500"
+        app:layout_constraintBottom_toTopOf="@+id/item_food_selection_horizontal_divider"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/expand_icon_gray"
-        tools:ignore="ContentDescription" />
-
-    <FrameLayout
-        android:id="@+id/item_food_expand_frame"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_food_image">
-
-        <include layout="@layout/item_food_entity_expand" />
-    </FrameLayout>
+        app:layout_constraintVertical_bias="0.5"
+        tools:ignore="RtlHardcoded" />
 
     <View
-        android:id="@+id/item_food_horizontal_divider"
+        android:id="@+id/item_food_selection_horizontal_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:background="@color/gray_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
