--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -2,138 +2,115 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_ingredient_constraint"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/ingredient_expand_constraint"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/item_ingredient_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:scaleType="center"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingredient_expand_background">
-
-        <View
-            android:id="@+id/ingredient_expand_horizontal_divider"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/gray_100"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <SeekBar
-            android:id="@+id/ingredient_expand_weight_bar"
-            style="@style/Widget.AppCompat.SeekBar"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="1dp"
-            android:max="100"
-            android:progress="50"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/ingredient_expand_weight_edit"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="33dp" />
-
-        <EditText
-            android:id="@+id/ingredient_expand_weight_edit"
-            style="@style/Widget.AppCompat.EditText"
-            android:layout_width="48dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="1dp"
-            android:ems="10"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:fontFamily="serif"
-            android:gravity="center_horizontal"
-            android:inputType="number"
-            android:maxLines="1"
-            android:selectAllOnFocus="false"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:layout_constraintRight_toLeftOf="@+id/ingredient_expand_menu"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="500"
-            tools:visibility="visible" />
-
-        <ImageButton
-            android:id="@+id/ingredient_expand_menu"
-            style="@style/RippleButton"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="1dp"
-            android:tint="@color/gray_400"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/menu_dots_icon"
-            tools:ignore="ContentDescription" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <View
-        android:id="@+id/ingredient_expand_background"
-        android:layout_width="0dp"
-        android:layout_height="36dp"
-        android:background="@color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/ingredient_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="14sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/ingredient_weight"
         app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ingredient_icon_gray"
+        tools:ignore="ContentDescription,RtlHardcoded" />
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/item_ingredient_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
+        android:fontFamily="serif"
+        android:hint="@string/hint_ingredient_name"
+        android:imeOptions="actionDone"
+        android:inputType="textCapSentences"
+        android:overScrollMode="ifContentScrolls"
+        android:scrollHorizontally="true"
+        android:scrollbars="none"
+        android:selectAllOnFocus="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
+        android:textSize="14sp"
+        app:backgroundTint="@color/cs_def_transparent_enabled_orange"
+        app:layout_constraintBottom_toBottomOf="@+id/item_ingredient_image"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/item_ingredient_image"
+        app:layout_constraintRight_toLeftOf="@+id/item_ingredient_weight_value"
+        app:layout_constraintTop_toTopOf="@+id/item_ingredient_image"
+        tools:ignore="RtlHardcoded"
         tools:text="Ingredient name" />
 
-    <TextView
-        android:id="@+id/ingredient_weight"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/item_ingredient_weight_value"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="4dp"
         android:fontFamily="serif"
-        android:labelFor="@+id/ingredient_expand_weight_edit"
+        android:gravity="right|center_vertical"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
+        android:overScrollMode="never"
+        android:scrollHorizontally="false"
+        android:scrollbars="none"
+        android:selectAllOnFocus="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
+        android:textSize="14sp"
+        app:backgroundTint="@color/cs_def_transparent_enabled_orange"
+        app:layout_constraintBaseline_toBaselineOf="@+id/item_ingredient_name"
+        app:layout_constraintRight_toLeftOf="@+id/item_ingredient_weight_unit"
+        tools:ignore="LabelFor,RtlHardcoded"
+        tools:text="10000" />
+
+    <TextView
+        android:id="@+id/item_ingredient_weight_unit"
+        android:layout_width="10dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:lines="1"
+        android:maxLines="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
-        app:layout_constraintRight_toLeftOf="@+id/ingredient_expand"
-        app:layout_constraintTop_toTopOf="@+id/ingredient_expand_background"
-        tools:text="120 g" />
-
-    <TextView
-        android:id="@+id/ingredient_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textSize="13sp"
-        app:layout_constraintRight_toLeftOf="@+id/ingredient_expand"
-        app:layout_constraintTop_toBottomOf="@+id/ingredient_weight"
-        tools:text="(5 pieces)" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/item_ingredient_weight_value"
+        app:layout_constraintRight_toLeftOf="@+id/item_ingredient_edit"
+        tools:text="g" />
 
     <ImageButton
-        android:id="@+id/ingredient_expand"
+        android:id="@+id/item_ingredient_edit"
         style="@style/RippleButton"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:tint="@color/gray_400"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintRight_toLeftOf="@+id/item_ingredient_expand"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/edit_icon_gray"
+        tools:ignore="ContentDescription" />
+
+    <ImageButton
+        android:id="@+id/item_ingredient_expand"
+        style="@style/RippleButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/expand_icon_gray"
         tools:ignore="ContentDescription" />
+
+    <FrameLayout
+        android:id="@+id/item_ingredient_expand_frame"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_ingredient_image">
+
+        <include layout="@layout/item_ingredient_expand" />
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
