--- a/app/src/main/res/layout/item_method_card.xml
+++ b/app/src/main/res/layout/item_method_card.xml
@@ -48,7 +48,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_method_edit" />
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/item_method_body"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
