--- a/app/src/main/res/layout/view_dialog_photo_url.xml
+++ b/app/src/main/res/layout/view_dialog_photo_url.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<EditText xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.AppCompatEditText xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_dialog_photo_url"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,12 +7,15 @@
     android:gravity="top|start"
     android:hint="@string/simple_dialog_title_photo_url"
     android:imeOptions="actionDone"
-    android:inputType="textMultiLine|textUri|textWebEditText"
-    android:lines="4"
+    android:inputType="textUri|textWebEditText"
+    android:lines="1"
+    android:maxLines="1"
     android:overScrollMode="always"
-    android:scrollHorizontally="false"
+    android:paddingEnd="0dp"
+    android:paddingStart="0dp"
+    android:scrollHorizontally="true"
     android:scrollbarStyle="insideInset"
-    android:scrollbars="vertical"
+    android:scrollbars="horizontal"
     android:selectAllOnFocus="false"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
     android:textSize="16sp" />
