--- a/app/src/main/res/layout/view_dialog_recipe_name.xml
+++ b/app/src/main/res/layout/view_dialog_recipe_name.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<EditText xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.AppCompatEditText xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_dialog_recipe_name"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
