--- a/app/src/main/res/layout/view_recipe_description.xml
+++ b/app/src/main/res/layout/view_recipe_description.xml
@@ -75,7 +75,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_description_author_image" />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/recipe_description_body"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -102,7 +102,7 @@
         tools:ignore="LabelFor"
         tools:text="Recipe description" />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/recipe_description_source"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
