--- a/app/src/main/res/layout/view_recipe_ingredients.xml
+++ b/app/src/main/res/layout/view_recipe_ingredients.xml
@@ -2,30 +2,25 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_ingredients_constraint"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/recipe_ingredients_image"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:padding="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/item_ingredient_icon"
-        tools:ignore="ContentDescription" />
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/recipe_ingredients_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/recipe_ingredients_image"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_ingredients_image"
-        app:layout_constraintTop_toTopOf="@+id/recipe_ingredients_image"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/recipe_ingredients_add"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recipe_ingredients_add"
+        tools:ignore="RtlHardcoded"
         tools:text="2 Ingredients" />
 
     <ImageButton
@@ -33,10 +28,9 @@
         style="@style/RippleButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:tint="@color/gray_400"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/add_icon"
+        app:srcCompat="@drawable/add_icon_gray"
         tools:ignore="ContentDescription" />
 
     <View
@@ -44,18 +38,19 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="0dp"
-        android:background="@color/gray_100"
+        android:background="@color/gray_300"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_image" />
+        app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_add" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_ingredients_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="vertical"
-        android:scrollbars="none"
+        android:scrollbars="vertical"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
