--- a/app/src/main/res/layout/view_recipe_labels.xml
+++ b/app/src/main/res/layout/view_recipe_labels.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginTop="0dp"
-        android:clipChildren="false"
+        android:clipChildren="true"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:padding="8dp"
