--- a/app/src/main/res/layout/view_recipe_serving.xml
+++ b/app/src/main/res/layout/view_recipe_serving.xml
@@ -7,86 +7,28 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/recipe_weight_icon"
+        android:id="@+id/recipe_serving_icon"
         android:layout_width="48dp"
-        android:layout_height="56dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="0dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="0dp"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/weight_icon_gray"
-        tools:ignore="ContentDescription,RtlHardcoded" />
-
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/recipe_weight_value"
-        android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:fontFamily="serif"
-        android:gravity="right|center_vertical"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:overScrollMode="never"
-        android:scrollHorizontally="false"
-        android:scrollbars="none"
-        android:selectAllOnFocus="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="?android:attr/textColorPrimaryNoDisable"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_weight_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="LabelFor,RtlHardcoded"
-        tools:text="50000" />
-
-    <TextView
-        android:id="@+id/recipe_weight_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="14sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/recipe_weight_value"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_weight_value"
-        tools:text="gram" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/recipe_weight_serving_vertical_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.45" />
-
-    <ImageView
-        android:id="@+id/recipe_serving_icon"
-        android:layout_width="48dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/recipe_weight_serving_vertical_guideline"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/serving_icon_gray"
         tools:ignore="ContentDescription,RtlHardcoded" />
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/recipe_serving_value"
-        android:layout_width="48dp"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
-        android:gravity="right|center_vertical"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:overScrollMode="never"
@@ -96,8 +38,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="?android:attr/textColorPrimaryNoDisable"
         android:textSize="14sp"
+        app:backgroundTint="@color/cs_def_transparent_enabled_orange"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toRightOf="@+id/recipe_serving_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="LabelFor,RtlHardcoded"
@@ -118,10 +60,10 @@
         tools:text="servings" />
 
     <ImageButton
-        android:id="@+id/recipe_weight_serving_edit"
+        android:id="@+id/recipe_serving_edit"
         style="@style/RippleButton"
         android:layout_width="48dp"
-        android:layout_height="56dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
