--- a/app/src/main/res/layout/view_dialog_photo_url.xml
+++ b/app/src/main/res/layout/view_dialog_photo_url.xml
@@ -7,7 +7,7 @@
     android:gravity="top|start"
     android:hint="@string/simple_dialog_title_photo_url"
     android:imeOptions="actionDone"
-    android:inputType="text|textMultiLine|textUri|textWebEditText"
+    android:inputType="text|textMultiLine|textUri"
     android:lines="1"
     android:maxLines="1"
     android:overScrollMode="always"
