--- a/app/src/main/res/layout/view_dialog_photo_url.xml
+++ b/app/src/main/res/layout/view_dialog_photo_url.xml
@@ -4,18 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fontFamily="serif"
-    android:gravity="top|start"
     android:hint="@string/simple_dialog_title_photo_url"
     android:imeOptions="actionDone"
-    android:inputType="text|textMultiLine|textUri"
-    android:lines="1"
-    android:maxLines="1"
+    android:inputType="text"
     android:overScrollMode="always"
     android:paddingEnd="24dp"
     android:paddingStart="24dp"
     android:scrollHorizontally="true"
-    android:scrollbarStyle="insideInset"
-    android:scrollbars="horizontal"
+    android:scrollbars="none"
     android:selectAllOnFocus="false"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-    android:textSize="13sp" />
+    android:textSize="14sp" />
