--- a/app/src/main/res/layout/view_dialog_photo_url.xml
+++ b/app/src/main/res/layout/view_dialog_photo_url.xml
@@ -6,7 +6,7 @@
     android:fontFamily="serif"
     android:hint="@string/simple_dialog_title_photo_url"
     android:imeOptions="actionDone"
-    android:inputType="text"
+    android:inputType="text|textNoSuggestions"
     android:overScrollMode="always"
     android:paddingEnd="24dp"
     android:paddingStart="24dp"
