--- a/app/src/main/res/layout/view_dialog_photo_url.xml
+++ b/app/src/main/res/layout/view_dialog_photo_url.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.alsash.reciper.ui.view.ImageUriEditText xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.AppCompatEditText xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_dialog_photo_url"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fontFamily="serif"
     android:hint="@string/simple_dialog_title_photo_url"
     android:imeOptions="actionDone"
-    android:inputType="text|textNoSuggestions"
+    android:inputType="text"
     android:overScrollMode="always"
     android:paddingEnd="24dp"
     android:paddingStart="24dp"
