--- a/app/src/main/res/layout/fragment_recipe_details_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recipe_details_ingredients.xml
@@ -43,5 +43,14 @@
             <include layout="@layout/view_recipe_ingredients" />
 
         </android.support.v7.widget.CardView>
+
+        <Space
+            android:id="@+id/space"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_ingredients_card" />
+
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
