--- a/app/src/main/res/layout/item_ingredient_expand.xml
+++ b/app/src/main/res/layout/item_ingredient_expand.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_food_expand_constraint"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="128dp">
 
     <ImageView
         android:id="@+id/item_food_image"
         android:layout_width="48dp"
         android:layout_height="36dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:scaleType="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,9 +21,11 @@
         android:id="@+id/item_food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="14sp"
@@ -30,7 +34,7 @@
         app:layout_constraintLeft_toRightOf="@+id/item_food_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/item_food_image"
-        app:layout_constraintVertical_bias="0.52"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="RtlHardcoded"
         tools:text="Food name" />
 
@@ -50,17 +54,14 @@
         android:id="@+id/item_food_nutrition_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="2dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:text="@string/hint_food_nutrition_value"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="@+id/item_food_nutrition_image"
         app:layout_constraintLeft_toRightOf="@+id/item_food_nutrition_image"
         app:layout_constraintTop_toTopOf="@+id/item_food_nutrition_image"
-        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed"
         tools:ignore="RtlHardcoded" />
 
@@ -74,7 +75,7 @@
         android:text="@string/hint_food_nutrition_quantity"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="@+id/item_food_nutrition_value"
+        app:layout_constraintLeft_toRightOf="@+id/item_food_nutrition_image"
         app:layout_constraintTop_toBottomOf="@+id/item_food_nutrition_value"
         tools:ignore="RtlHardcoded" />
 
@@ -84,13 +85,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/green_500"
         android:textSize="14sp"
         android:textStyle="italic"
-        app:layout_constraintBaseline_toBaselineOf="@+id/item_food_nutrition_value"
         app:layout_constraintLeft_toRightOf="@+id/item_food_nutrition_value"
+        app:layout_constraintTop_toTopOf="@+id/item_food_nutrition_value"
         tools:ignore="RtlHardcoded"
         tools:text="Carbs 16 g" />
 
@@ -130,7 +132,6 @@
         android:id="@+id/item_food_energy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
@@ -139,10 +140,8 @@
         android:textColor="@color/teal_accent_700"
         android:textSize="14sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/item_food_fat"
         app:layout_constraintTop_toBottomOf="@+id/item_food_fat"
-        app:layout_constraintVertical_bias="0.0"
         tools:ignore="RtlHardcoded"
         tools:text="Energy 270 cal" />
 
